# aeo

./: .gitignore  README.md
AEOLOVABLE/: AUTOMATION_SETUP.md  DATABASE_SCHEMA.sql  DATABASE_SCHEMA_TEST.sql  FRONTEND_DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  N8N_WORKFLOWS.md  PROJECT_SPECIFICATION.md  QUICKSTART_TESTING.md  README.md  SCHEMA_FIX_NOTES.md  SUPABASE_ADVANCED.md  SUPABASE_QUICK_REFERENCE.md  SUPABASE_SETUP_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TESTING_DEPLOYMENT.md  TESTING_README.md  TEST_DEMO_OUTPUT.md  TROUBLESHOOTING.md  run-database-tests.sh
AEOLOVABLE/n8n-workflows/: 01-instagram-lead-discovery.json  02-lead-analysis-qualification.json  03-automated-outreach.json  04-response-monitoring.json  05-follow-up-automation.json  06-lead-conversion-tracking.json  README.md
AEOWEB/: FULLSTACK-GUIDE.md  README.md  SECURITY.md  implementation-guide.md  index.html
AEOWEB-refactored/: README.md  docker-compose.yml  package.json
AEOWEB-refactored/database/: init.sql
AEOWEB-refactored/docs/: API.md  DEPLOYMENT.md
AEOWEB-refactored/frontend/: Dockerfile  package.json
AEOWEB/backend/: .env.example  package.json
AEOWEB/database/: schema.sql
AEOWEB/examples/: README.md
AEOWEB/schema/: article.json  faq.json  howto.json  localbusiness.json  organization.json  product.json
AEOWEB/system-design/: README.md  chapter-01-introduction.md  chapter-02-single-server.md  chapter-03-databases.md  chapter-04-scaling.md  chapter-05-load-balancing.md  chapter-06-health-checks.md  chapter-07-spof.md  chapter-08-api-design.md  chapter-09-api-protocols.md  chapter-10-transport-layer.md  chapter-11-restful-apis.md  chapter-12-graphql.md  chapter-13-authentication.md  chapter-14-authorization.md  chapter-15-security.md
ASA/: .env.example  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  docker-compose.yml
ASA/.github/workflows/: ci.yml
ASA/backend/gateway/: Cargo.toml  Dockerfile
ASA/backend/gateway/src/: config.rs  handlers.rs  main.rs  proxy.rs  router.rs
ASA/backend/gateway/src/handlers/: aeo.rs  analytics.rs  content.rs  health.rs  mod.rs  root.rs
ASA/backend/gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
ASA/backend/services/analytics/: .env.example  Cargo.toml  Dockerfile
ASA/backend/services/analytics/src/: aggregator.rs  config.rs  handlers.rs  main.rs  models.rs  repository.rs  scylla_client.rs
ASA/backend/services/auth/: .env.example  Cargo.toml  Dockerfile
ASA/backend/services/auth/src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  repository.rs  webauthn_config.rs
ASA/backend/services/auth/src/oauth/: github.rs  google.rs  mod.rs
ASA/backend/services/content/: .env.example  Cargo.toml  Dockerfile
ASA/backend/services/content/src/: aeo_optimizer.rs  ai_generator.rs  config.rs  handlers.rs  main.rs  models.rs  repository.rs  schema_generator.rs
ASA/backend/services/search/: .env.example  Cargo.toml  Dockerfile
ASA/backend/services/search/src/: config.rs  handlers.rs  indexer.rs  main.rs  models.rs
ASA/docs/: AEO_INTEGRATION.md  ARCHITECTURE.md
ASA/frontend/app/: Cargo.toml  Trunk.toml  index.html
ASA/frontend/app/src/: app.rs  lib.rs
ASA/frontend/app/src/components/: mod.rs
ASA/frontend/app/src/pages/: aeo.rs  analytics.rs  content.rs  home.rs  mod.rs  not_found.rs
ASA/frontend/app/src/services/: api.rs  mod.rs
ASA/frontend/app/src/state/: mod.rs
ASA/frontend/app/style/: main.css
ASA/infrastructure/kubernetes/: auth-service.yaml  configmap.yaml  content-service.yaml  gateway.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
ASA/infrastructure/monitoring/grafana/dashboards/: aeo-metrics.json  asa-overview.json
ASA/infrastructure/monitoring/prometheus/: prometheus.yml
ASA/infrastructure/monitoring/prometheus/rules/: alerts.yml
ASA/infrastructure/nginx/: nginx.conf
ASA/infrastructure/terraform/: main.tf  variables.tf
ASA/shared/database/: Cargo.toml
ASA/shared/database/src/: lib.rs  postgres.rs  redis_client.rs
ASA/shared/models/: Cargo.toml
ASA/shared/models/src/: analytics.rs  content.rs  lib.rs  user.rs
ASA/shared/models/src/aeo/: citation.rs  mod.rs  optimization.rs  platform.rs  schema.rs
ASA/shared/proto/: build.rs
ASA/shared/proto/proto/: analytics.proto  content.proto  search.proto
ASA/shared/telemetry/: Cargo.toml
ASA/shared/telemetry/src/: lib.rs  metrics_setup.rs  tracing_setup.rs
ASA/tests/: integration_test.rs  load_test.rs
ASA/tools/migrations/: Cargo.toml
ASA/tools/migrations/migrations/: 001_initial.sql  002_aeo_tables.sql  003_analytics.sql  004_indexes.sql
ASA/tools/migrations/src/: main.rs
autonomous-robotics/: .env.example  QUICKSTART.md  README.md  docker-compose.yml
chapters/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  conclusion.md
use-cases/: README.md  aeo-nof1-implementation.md  docker-compose.yml  integration-config.json
use-cases/aeo-chatgpt/: COMPLETION_SUMMARY.md  README.md  chapter-01-architecture.md  chapter-01-chatgpt-search-architecture.md  chapter-02-chatgpt-ranking-factors.md  chapter-02-user-behavior.md  chapter-03-content-optimization.md  chapter-04-schema-markup.md  chapter-04-technical-implementation.md  chapter-05-authority-building.md  chapter-05-shopping-ecommerce.md  chapter-06-ecommerce-optimization.md  chapter-06-local-business.md  chapter-07-enterprise-b2b.md  chapter-07-local-business-optimization.md  chapter-08-analytics-measurement.md  chapter-08-custom-gpts.md  chapter-09-advanced-strategies.md  chapter-09-voice-multimodal.md  chapter-10-case-studies.md  chapter-10-measurement.md  chapter-11-advanced-tactics.md  chapter-12-case-studies.md
use-cases/aeo-claude/: COMPLETION_SUMMARY.md  README.md  chapter-01-architecture.md  chapter-01-claude-architecture.md  chapter-02-claude-citation-factors.md  chapter-02-user-behavior.md  chapter-03-content-optimization-claude.md  chapter-03-content-optimization.md  chapter-04-technical-documentation.md  chapter-10-measurement.md  (+9 more)
(+232 files in other folders)
