[workspace]
resolver = "2"
members = [
    "frontend/app",
    "frontend/components",
    "backend/gateway",
    "backend/services/auth",
    "backend/services/content",
    "backend/services/analytics",
    "backend/services/search",
    "shared/models",
    "shared/database",
    "shared/telemetry",
    "shared/proto",
    "edge/workers",
    "tools/migrations",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AEO Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web frameworks
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Frontend WASM
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = "0.5"
leptos_router = "0.5"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
scylla = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
webauthn-rs = "0.4"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Search
meilisearch-sdk = "0.25"

# gRPC
tonic = "0.10"
prost = "0.12"

# Testing
mockall = "0.12"
wiremock = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
