[package]
name = "asa-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true

# Local dependencies
asa-models = { path = "../../shared/models" }

# Additional dependencies
axum-extra = { version = "0.9", features = ["typed-header"] }
http-body-util = "0.1"

[[bin]]
name = "gateway"
path = "src/main.rs"
