[package]
name = "asa-content"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true
metrics.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
dotenvy.workspace = true

# HTTP client for AI APIs
reqwest.workspace = true

# Caching
moka.workspace = true

# Shared crates
asa-models = { path = "../../../shared/models" }
asa-database = { path = "../../../shared/database" }
asa-telemetry = { path = "../../../shared/telemetry" }

# Additional dependencies
slug = "0.1"
pulldown-cmark = "0.9"  # Markdown processing
html-escape = "0.2"
